# smithy-tempalte

./: Cargo.toml  Makefile  README.md
smithy/: smithy-build.json
smithy/model/: error.smithy  main.smithy
